--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,7 @@
-node_modules
-app/app.component.js
-app/app.component.js.map
-app/dashboard.component.js
-app/dashboard.component.js.map
-app/hero-detail.component.js
-app/hero-detail.component.js.map
-app/hero.js
-app/hero.js.map
-app/hero.service.js
-app/hero.service.js.map
-app/heroes.component.js
-app/heroes.component.js.map
-app/main.js
-app/main.js.map
-app/mock-heroes.js
-app/mock-heroes.js.map
+# Dependency directory
+# https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
+/node_modules
+npm-debug.log
+
+/app/**/*.js
+/app/**/*.js.map
