--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
   },
   "license": "ISC",
   "dependencies": {
-    "angular2": "2.0.0-beta.3",
-    "systemjs": "0.19.6",
+    "angular2": "2.0.0-beta.1",
     "es6-promise": "^3.0.2",
     "es6-shim": "^0.33.3",
+    "ng2-select": "^1.0.1-beta.0",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.0",
+    "systemjs": "0.19.6",
     "zone.js": "0.5.11"
   },
   "devDependencies": {
