--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "start": "concurrent \"npm run tsc:w\" \"npm run lite\" "
   },
   "dependencies": {
-    "angular2": "2.0.0-beta.3",
+    "angular2": "2.0.0-beta.0",
     "es6-promise": "^3.0.2",
     "es6-shim": "^0.33.13",
-    "ng2-select": "^1.0.1-beta.0",
+    "ng2-little-kitty": "*",
     "ng2-material": "^0.1.0",
+    "ng2-select": "^1.0.1-beta.0",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.0",
     "systemjs": "0.19.6",
