--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+ng2-app.sublime-project
+ng2-app.sublime-workspace
+
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 /node_modules
